# thesis

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  lcd_main.cpp  new_main.cpp
main/DIP_SWITCH/: dip_switch.cpp  dip_switch.hpp
main/EXAMPLE/: gpio_example_main.c
main/LAB1/: lab_1.cpp  lab_1.hpp
main/LAB2/: buzzer.cpp  buzzer.hpp  esp_adc.cpp  esp_adc.hpp  external_adc.cpp  external_adc.hpp  photoresistor.cpp  photoresistor.hpp  waves.cpp  waves.hpp
main/LAB3/: power_meter.cpp  power_meter.hpp
main/LCD/: lcd.cpp  lcd.hpp  lcd_espi.cpp  lcd_espi.hpp  waveform.cpp  waveform.hpp
main/old_code/: adc_calib.cpp  internal_adc.cpp  internal_adc.hpp  main.cpp  oneshot_read_main.c
